--- a/errors/404.html
+++ b/errors/404.html
@@ -30,45 +30,33 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    
-
-      <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="index.html"><i class="fa fa-map-marker" aria-hidden="true"></i> <b>kadaster</b> as a service</a>
-          <button class="navbar-toggler btn-bars" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </button>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <img src="img/KDC_logo_demo.png" style="width: 190px;">
+            </a>
+            <button class="navbar-toggler btn-bars" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars" aria-hidden="true"></i>
+            </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="inschrijven.html">Inschrijven</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kaarten</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="totaalkaart.html"><i class="fa fa-line-chart" aria-hidden="true"></i> Statistieken</a>
-                  <a class="dropdown-item" href="voorspellingen.html"><i class="fa fa-map-o" aria-hidden="true"></i> Toekomstkaart</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="kaart.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Totaaloverzicht</a>
-                </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">Over ons</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
+                <ul class="nav navbar-nav" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link dc-navbar" href="index.html" aria-controls="home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dc-navbar" href="shop.html" aria-controls="producten">Producten bestellen</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dc-navbar" href="info.html" aria-controls="advies">Advies en informatie</a>
+                    </li>
+                </ul>
             </div>
-          </div>
-      </nav>
+        </div>
+    </nav>
 
 <div class="container my-4">
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <div class="alert alert-info text-lg" role="alert">
             <h4 class="margin-top margin-bottom-lg my-3">We hebben overal gezocht, maar deze pagina konden we niet vinden.</h4>
             <p>Niet getreurd, er zijn nog andere opties:</p>
@@ -88,101 +76,45 @@
             <small>ERROR 404</small>
           </div>
         </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h5 class="card-header">Of ga naar...</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                      <a href="inschrijven.html">Inschrijven</a>
-                    </li>
-                    <li>
-                      <a href="kaart.html">Kaarten</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="about.html">Over ons</a>
-                    </li>
-                    <li>
-                      <a href="ISO37120.html">KPI</a>
-                    </li>
-                    <li>
-                      <a href="http://kadaster.nl">Het Kadaster</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
     </div>
 </div>
 
 <!-- Footer -->
-    <footer class="footer bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-            <ul class="list-inline mb-2">
-              <li class="list-inline-item">
-                <a class="footernav" href="index.html">Home</a>
-              </li>
-              <li class="list-inline-item">⋅</li>
-              <li class="list-inline-item">
-                <a class="footernav" href="inschrijven.html">Inschrijven</a>
-              </li>
-              <li class="list-inline-item">⋅</li>
-              <li class="list-inline-item">
-                <a class="footernav" href="kaart.html">Kaarten</a>
-              </li>
-              <li class="list-inline-item">⋅</li>
-              <li class="list-inline-item">
-                <a class="footernav" href="about.html">Over ons</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="footernav" href="contact.html">Contact</a>
-              </li>
-              <li class="list-inline-item">⋅</li>
-              <li class="list-inline-item">
-                <a class="footernav" href="ISO37120.html">KPI</a>
-              </li>
-              <li class="list-inline-item">⋅</li>
-              <li class="list-inline-item">
-                <a class="footernav" href="https://www.kadaster.nl">Het Kadaster</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">© Kadaster as a service</p>
-          </div>
-          <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-facebook fa-2x fa-fw social"></i>
-                </a>
-              </li>
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-twitter fa-2x fa-fw social"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-instagram fa-2x fa-fw social"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <footer class="footer navbar-dark">
+                                          <div class="container">
+                                            <div class="row">
+                                              <div class="col-lg-7 h-100 text-center text-lg-left my-auto">
+                                                <ul class="list-inline mb-2">
+                                                  <li class="list-inline-item">
+                                                    <a class="footernav" href="#home">Home</a>
+                                                  </li>
+                                                  <li class="list-inline-item">⋅</li>
+                                                  <li class="list-inline-item">
+                                                    <a class="footernav" href="#producten">Producten bestellen</a>
+                                                  </li>
+                                                  <li class="list-inline-item">⋅</li>
+                                                  <li class="list-inline-item">
+                                                    <a class="footernav" href="#advies">Advies en informatie</a>
+                                                  </li>
+                                                  <li class="list-inline-item">⋅</li>
+                                                  <li class="list-inline-item">
+                                                    <a class="footernav" href="" data-toggle="modal" data-target="#disclaimerModalCenter">Disclaimer</a>
+                                                  </li>
+                                                </ul>
+                                              </div>
+                                              <div class="col-lg-2 h-100 text-center my-auto">
+                                                <a href="https://data.pdok.nl">
+                                                  <img src="img/intro-logo.png" style="max-width: 100px;">
+                                                  </a>
+                                                </div>
+                                                <div class="col-lg-3 h-100 text-center text-lg-right my-auto">
+                                                  <a href="https://kadaster.nl">
+                                                    <img src="img/kadasterlogowit.png" style="max-width: 100px;">
+                                                    </a>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </footer>
     
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
