--- a/info.html
+++ b/info.html
@@ -283,7 +283,7 @@
                                       </div>
                                     </div>
 
-                                        <footer class="footer bg-light">
+                                        <footer class="footer navbar-dark">
                                           <div class="container">
                                             <div class="row">
                                               <div class="col-lg-7 h-100 text-center text-lg-left my-auto">
@@ -307,12 +307,12 @@
                                               </div>
                                               <div class="col-lg-2 h-100 text-center my-auto">
                                                 <a href="https://data.pdok.nl">
-                                                  <img src="img/pdoklogo.png" style="max-width: 100px;">
+                                                  <img src="img/intro-logo.png" style="max-width: 100px;">
                                                   </a>
                                                 </div>
                                                 <div class="col-lg-3 h-100 text-center text-lg-right my-auto">
                                                   <a href="https://kadaster.nl">
-                                                    <img src="img/kadasterlogo.png" style="max-width: 100px;">
+                                                    <img src="img/kadasterlogowit.png" style="max-width: 100px;">
                                                     </a>
                                                   </div>
                                                 </div>
